Thu Dec 21 16:12:16 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * bin/tao_orb_tests.lst:

          Fixing the condition for running the Transport::Current tests
          (note that ST = Single Threaded, not STATIC).

Thu Dec 21 14:31:04 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Sock_Connect.cpp:
          Added support for get_interfaces for rtems

Thu Dec 21 13:32:08 UTC 2006  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_lynxos.GNU:
          Moved macro definitions from CFLAGS to CPPFLAGS.

Thu Dec 21 12:12:04 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/rules.bin.GNU:
          Removed old chorus rules

Thu Dec 21 10:17:04 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/UUID.cpp:
          Fixed initialisation warning

Thu Dec 21 09:45:00 UTC 2006  Simon Massey  <sma@prismtech.com>

        * ace/OS_TLI.inl:
        * ace/OS_NS_signal.h:

          Updated some HPUX Acc version bug fixes.....

Thu Dec 21 08:47:04 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/JAWS2/HPPTU/http_headers.{h,inl}:
          Fixed const warnings with Intel C++

Wed Dec 20 22:06:14 UTC 2006  Olli Savia  <ops@iki.fi>

        * tests/OS_Test.cpp:
          HP-UX has broken vsnprintf function. Changed the test not
          to fail on HP-UX.

Wed Dec 20 16:35:53 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

          These are fixes correcting scoreboard issues pertaining to the
          checkin from Tue Dec 19 22:09:34 UTC 2006.

        * bin/tao_orb_tests.lst:

          Added the two Transport::Current tests to the scoreboard.

        * bin/MakeProjectCreator/config/tc.mpb:

          Moved this file to $TAO_ROOT/MPC/config where it belongs.

Wed Dec 20 12:31:04 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/test_config.h:
          Only define ACE_START_TEST and ACE_END_TEST when they are not