@@ -1,3 +1,8 @@
+Thu Dec 21 20:19:04 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Sock_Connect.cpp:
+          Use prefix increment and made get_interfaces working with rtems
+
 Thu Dec 21 16:12:16 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>
 
         * bin/tao_orb_tests.lst:
